恢复start脚本配置